--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ matplotlib==3.2.1
 mkl-service==2.3.0
 multiprocess==0.70.11.1
 networkx==2.4
-numpy==1.17.0
+numpy==1.17.3
 opencv-contrib-python==4.2.0.34
 opencv-python==4.2.0.34
 p-tqdm==1.3.3
@@ -61,3 +61,4 @@ torchvision==0.6.0
 tqdm==4.46.1
 typing-extensions==3.7.4.2
 ujson==3.0.0
+moviepy
